Version 4.12.0   unreleased

    * Deprecate NativeUtils.openUrl(), which doesn't work properly in IE 9.

Version 4.11.5   02 Sep 2015

    * Implement Jacoco coverage reports in build.gradle.
    * Implement Checkstyle reports in build.gradle.
    * Implement JavaNCSS metrics in build.gradle.
    * Exclude duplicates from generated jar files.
    * Bump up to CedarBuild v0.9.5, to get Javadoc fixes.
    * Bump up to AppEngine v1.9.25, to stay up-to-date.

Version 4.11.4   17 Jul 2015

    * Bump up to CedarBuild v0.9.3, just to stay up-to-date.
    * Fix Eclipse 4.5 resource leak warning for streams in FilesystemUtils.copyFile().
    * Fix Eclipse 4.5 resource leak warning for Scanner in StringUtils.convertStreamToString().

Version 4.11.3   13 Jul 2015

    * Bump up to AppEngine v1.9.23 just to stay up-to-date.
    * Convert to Gradle 2 by upgrading to CedarBuild v0.9.1 (tested with Gradle v2.5).

Version 4.11.2   14 Jun 2015

    * Bump up to CedarBuild v0.8.17, just to stay up-to-date.
    * Configure Mercurial line endings in .hgeol and auto-convert files as necessary.

Version 4.11.1   17 Mar 2015

    * Make adjustments for transition from Google Code to BitBucket.

Version 4.11.0   17 Mar 2015

    * Bump up to AppEngine v1.9.18 just to stay up-to-date.
    * Move to Maven Central based on support in CedarBuild v0.8.14.
    * Pull in Objectify 3.1 from repackaged repository in Maven Central.

Version 4.10.0  11 Jan 2015

    * Bump up to AppEngine v1.9.17a and CedarBuild v0.8.12.
    * Deprecate the GaeUserService and GaeUserRpc methods that handle federated login.
    * Implement new GaeUserService and GaeUserRpc methods to support Google Accounts logins.

Version 4.9.2   08 Nov 2014

    * Document that this version of CedarCommon is compatible only with GWT v2.5 and v2.6.
    * Bump up to AppEngine v1.9.15, since this will be one of the last releases of v4.x.

Version 4.9.1   28 Oct 2014
