@@ -1,6 +1,7 @@
 Version 4.12.0   unreleased
 
     * Deprecate NativeUtils.openUrl(), which doesn't work properly in IE 9.
+    * Reimplement AbstractWidgetUtils.openUrl() using Window.Location.assign().
 
 Version 4.11.5   02 Sep 2015
 
